# test_task

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 6e1c3103fbf9_first_migration.py  9ccac41c379c_new_migration.py
src/: conftest.py  schemas.py
src/Tests/: test_ai.py  test_analytics.py  test_repository_notes.py  test_repository_users.py  test_route_auth.py  test_routes_notes.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: notes.py  users.py
src/routes/: notes.py  users.py
src/services/: ai.py  analytics.py  auth.py
